--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -4,13 +4,13 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 40%;
 
   .dropdown-select {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
+    height: 100%;
     background-color: lighten(lightGrey, 45%);
     padding: 9px 5px;
     margin: 0;
@@ -19,7 +19,7 @@
     border-top: none;
     border-right: none;
     border-left: none;
-    text-align: start;
+    text-align: left;
     cursor: pointer;
     outline: none;
 
@@ -67,9 +67,10 @@
 
   .dropdown-content {
     width: 100%;
+    overflow-x: hidden;
     position: absolute;
     left: 0;
-    top: 35px;
+    top: 100%;
     list-style-type: none;
     margin: 0;
     padding-top: 2px;
@@ -89,7 +90,7 @@
       white-space: nowrap;
       padding: 5px 10px;
       width: 100%;
-      text-align: start;
+      text-align: left;
       cursor: pointer;
       outline: none;
       background-color: white;
