--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -4,112 +4,119 @@
   position: relative;
   display: flex;
   flex-direction: column;
+}
+.dropdown-select {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: lighten(lightGrey, 45%);
+  padding: 9px 5px;
+  margin: 0;
+  border-radius: 0px;
+  border-bottom: 2px solid lighten($grey, 20%);
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 
-  .dropdown-select {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: lighten(lightGrey, 45%);
-    padding: 9px 5px;
-    margin: 0;
-    border-radius: 0px;
-    border-bottom: 2px solid lighten($grey, 20%);
-    border-top: none;
+  &:hover, &:focus {
+    box-shadow: 0px 1px 3px 2px lighten($grey, 35%);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+  }
+
+  .displayed-value {
+    flex: 1;
+    border-right: 1px solid lighten($grey, 30%);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: $black;
+  }
+
+  .no-arrow {
     border-right: none;
-    border-left: none;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-
-    &:hover, &:focus {
-      box-shadow: 0px 1px 3px 2px lighten($grey, 35%);
-    }
-
-    &:disabled {
-      cursor: not-allowed;
-    }
-
-    .displayed-value {
-      flex: 1;
-      border-right: 1px solid lighten($grey, 30%);
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      color: $black;
-    }
-
-    .grey {
-      color: $grey;
-    }
-
-    .dropdown-arrow {
-      content: "";
-      width: 0;
-      height: 0;
-      margin-left: 8px;
-      margin-right: 5px;
-      border-right: 5px solid transparent;
-      border-left: 5px solid transparent;
-    }
-
-    .down {
-      border-top: 5px solid $grey;
-      border-bottom: 0;
-    }
-
-    .up {
-      border-bottom: 5px solid $grey;
-      border-top: 0;
-    }
   }
 
-  .dropdown-content {
-    width: 100%;
-    overflow-x: hidden;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left: 0;
-    padding-right: 0;
-    background-color: white;
-    color: black;
-    border-radius: 2px;
-    display: none;
-    box-sizing: border-box;
-    box-shadow: 0px 3px 3px 2px lighten($grey, 35%);
-
-    .dropdown-option, .dropdown-option-selected {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      padding: 5px 10px;
-      width: 100%;
-      text-align: left;
-      cursor: pointer;
-      outline: none;
-      background-color: white;
-      border: none;
-
-      &:hover, &:focus {
-        background-color: lighten($grey, 35%);
-      }
-    }
-
-    .dropdown-option-selected {
-      background-color: lighten($purple-light, 30%);
-      &:hover, &:focus {
-        background-color: lighten($purple-light, 20%);
-      }
-    }
+  .grey {
+    color: $grey;
   }
 
-  .dropdown-content-open {
-    display: block;
+  .center-text {
+    text-align: center;
   }
+
+  .dropdown-arrow {
+    content: "";
+    width: 0;
+    height: 0;
+    margin-left: 8px;
+    margin-right: 5px;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+  }
+
+  .down {
+    border-top: 5px solid $grey;
+    border-bottom: 0;
+  }
+
+  .up {
+    border-bottom: 5px solid $grey;
+    border-top: 0;
+  }
+}
+
+.dropdown-content {
+  width: 100%;
+  overflow-x: hidden;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 0;
+  padding-right: 0;
+  background-color: white;
+  color: black;
+  border-radius: 2px;
+  display: none;
+  box-sizing: border-box;
+  box-shadow: 0px 3px 3px 2px lighten($grey, 35%);
+}
+
+.dropdown-option, .dropdown-option-selected {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 5px 10px;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  background-color: white;
+  border: none;
+
+  &:hover, &:focus {
+    background-color: lighten($grey, 35%);
+  }
+}
+
+.dropdown-option-selected {
+  background-color: lighten($purple-light, 30%);
+  &:hover, &:focus {
+    background-color: lighten($purple-light, 20%);
+  }
+}
+
+.dropdown-content-open {
+  display: block;
 }
