Add roll up to project

--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -1,4 +1,10 @@
-@import './colours.scss';
+$white: #FFFFFF;
+$black: #000000;
+$green: #7AB55C;
+$grey: #7B7B7B;
+$purple-light: #5C6AC4;
+$purple-dark: #000639;
+$red: #C23628;
 
 .dropdown {
   position: relative;
