--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -76,6 +76,7 @@
 .dropdown-content {
   width: 100%;
   max-height: 175px;
+  z-index: 9999;
   overflow-x: hidden;
   position: absolute;
   left: 0;
