--- a/demo/src/index.scss
+++ b/demo/src/index.scss
@@ -1,7 +1,16 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-size: 16px;
   font-family: 'Ubuntu', sans-serif;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 .demo-app {
@@ -14,6 +23,7 @@ body {
 
 .header {
   display: flex;
+  flex: 1 0 100px;
   flex-direction: column;
   width: 100%;
   align-items: center;
@@ -29,7 +39,7 @@ body {
   }
 
   .description {
-    margin: 1em 20%;
+    margin: 1em auto;
     text-align: center;
   }
 }
@@ -58,6 +68,7 @@ body {
 
 .footer {
   display: flex;
+  flex: 1 1 20px;
   flex-direction: column;
   width: 100%;
   align-items: center;
