--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -84,10 +84,7 @@
   left: 0;
   list-style-type: none;
   margin: 0;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 2px 0;
   background-color: white;
   color: black;
   border-radius: 2px;
