--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -146,3 +146,15 @@
 .dropdown-content-open {
   display: block;
 }
+
+.dropdown-group {
+  padding: 1em 0 0 0;
+  .dropdown-group-heading {
+    color: grey;
+    font-size: 0.9em;
+    padding: 0 10px 3px 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
