--- a/demo/src/index.scss
+++ b/demo/src/index.scss
@@ -1,3 +1,6 @@
+$dark-green: #54854C;
+$light-green: #CCE7C8;
+
 html {
   height: 100%;
 }
@@ -18,7 +21,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+  background-color: $light-green;
 }
 
 .header {
@@ -28,7 +31,7 @@ body {
   width: 100%;
   align-items: center;
   justify-content: center;
-  background-color: cornflowerblue;
+  background-color: $dark-green;
   padding: 3em 0;
 
   .title {
@@ -52,12 +55,26 @@ body {
   .section-title {
     font-size: 1.25em;
     margin: 0 0 0.5em 0;
+    display: flex;
+
+    .section-source-link {
+      display: flex;
+      border-radius: 4px;
+      border: 2px solid #598951;
+      margin-left: 4px;
+      padding: 1px 8px 0 8px;
+      font-size: 0.7em;
+
+      text-decoration: none;
+      color: #717171;
+      font-weight: 600;
+    }
   }
 
   .buttons-container {
     display: flex;
     flex-direction: column;
-    margin: 1em 0 0 0;
+    margin: 0.4em 0 0 0;
 
     .checkbox-input {
       display: flex;
@@ -77,10 +94,11 @@ body {
   width: 100%;
   align-items: center;
   justify-content: center;
-  background-color: lightgray;
+  background-color: white;
   padding: 2em 0;
 
   .copyright {
     text-align: center;
+    color: #878787;
   }
 }
