Move to antd stuff

--- a/demo/src/index.scss
+++ b/demo/src/index.scss
@@ -79,13 +79,7 @@ body {
 
   .buttons-container {
     display: flex;
-    flex-direction: column;
     margin: 0.4em 0 0 0;
-
-    .checkbox-input {
-      display: flex;
-      flex-direction: row;
-    }
   }
 
   &:last-child {
@@ -107,4 +101,8 @@ body {
     text-align: center;
     color: #878787;
   }
+}
+
+.ant-anchor-wrapper {
+  background-color: unset !important;
 }
